force-app/main/default/objects/Account/fields/Date_Time_Validated__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Validated__c</fullName>
    <label>Date/Time Validated</label>
    <type>DateTime</type>
</CustomField>