force-app/main/default/objects/Account/fields/Is_Valid_Address_For_USPS__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid_Address_For_USPS__c</fullName>
    <label>Is Valid Address For USPS?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Did not checked yet</fullName>
                <default>true</default>
                <label>Did not checked yet</label>
            </value>
            <value>
                <fullName>Valid Address</fullName>
            </value>
            <value>
                <fullName>Not a Valid Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>