force-app/main/default/objects/Account/fields/Total_Balance_Pay__c.field-meta.xml
<CustomField>
    <fullName>Total_Balance_Pay__c</fullName>
    <label>Total Balance Pay</label>
    <summarizedField>My_Pay__c.Balance_Pay__c</summarizedField>
    <summaryForeignKey>My_Pay__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>