force-app/main/default/objects/Account/fields/USPS_Response__c.field-meta.xml
<CustomField>
    <fullName>USPS_Response__c</fullName>
    <label>USPS Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>